# pastry

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  style.css  style.scss
src/config/scss/: bar.scss
src/config/scss/colors/: shortcake.scss
src/factory/: misc.rs  mod.rs  mpris.rs  scripts.rs  shell.rs  system.rs
src/factory/x11/: mod.rs
src/scss/: bar.scss  card.scss
src/scss/colors/: lavender.scss  shortcake.scss
src/style/: style.scss
src/style/scss/: card.scss
src/style/scss/colors/: lavender.scss
src/widgets/: mod.rs
src/widgets/custom_box/: imp.rs  mod.rs
src/widgets/custom_button/: imp.rs  mod.rs
src/widgets/custom_scroll/: imp.rs  mod.rs
src/widgets/custom_window/: imp.rs  mod.rs
