[package]
name = "pastry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.18.1"

grass = "0.13.2"

async-channel = "2.2.0"
futures = "0.3.30"

networkmanager = "0.4"
dbus = "0.9"

mpris = "2.0.1"
